fixed button styling not showing

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ input {
   padding: 10px;
 }
 
-#hitung {
+button {
   background-color: #3F2E3E;
   color: #fff;
   border: none;
